# RMS

./: deck.pptx  pyproject.toml
Schema/: resume_data_structure.json
Schema_resume/: resume_data_structure.json
code/: Shwaira Resume Format.docx
code/my_data/: nlp_clean.txt  nlp_extract.txt
code/my_data/clean_myresume/: Pundalik_desai_IT_25.txt  Rushikesh Surve Resume.txt  Shivam_Parab.txt
code/my_data/clean_word/: Abiral_Pandey_Fullstack_Java.txt  Achyuth Resume_8.txt  Adelina_Erimia_PMP1.txt
code/my_data/extracted_myresume/: Pundalik_desai_IT_25.txt  Rushikesh Surve Resume.txt  Shivam_Parab.txt
code/my_data/json_myresume/: Pundalik_desai_IT_25.json  Rushikesh Surve Resume.json  Shivam_Parab.json
code/my_data/json_myresume2/: Pundalik_desai_IT_25.json  Resume_Manasi Suresh Agre.json  Rushikesh Surve Resume.json  Shivam_Parab.json
code/my_data/json_word/: Abiral_Pandey_Fullstack_Java.json  Achyuth Resume_8.json  Adelina_Erimia_PMP1.json  Adhi Gopalam - SM.json  AjayKumar.json
code/resume_ingestion/: clean2.py  cleaning_extracted.py  extractor_pdf.py  extractor_word.py  json_convert.py  json_converter2.py  nlp_cleaning_pdf.py  nlp_extraction_pdf.py  ocr.py  skills_list.txt
code/template/: company_resume_template.html  company_template_with_placeholders.docx  json_to_word.py
dataset/all_data/clean_profiles/: 10030015.txt  10219099.txt  10624813.txt  10712803.txt  10985403.txt  11890896.txt  11981094.txt  12011623.txt  12022566.txt  12472574.txt  12488356.txt  12518008.txt  12748557.txt  13149176.txt  13264796.txt  14049846.txt  14206561.txt  (+8 more)
(+78 files in other folders)
